# advent-of-code

./: .gitignore  .gitmodules  README.md
.github/workflows/: aoc2023_test.yml  rust.yml
AOC2022/src/: day_1.rs
aoc-2022/src/: day_1.rs  main.rs
aoc2020/: Cargo.toml  build.rs
aoc2020/src/: main.rs
aoc2020/src/day_1/: input.txt  mod.rs
aoc2022/: Cargo.toml
aoc2022/.cargo/: config.toml
aoc2022/src/: day_1.rs  day_10.rs  day_11.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_5_old.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  main.rs
aoc2022/src/day_10/: mod.rs
aoc2022/src/day_11/: mod.rs
aoc2022/src/day_12/: mod.rs
aoc2022/src/day_13/: mod.rs
aoc2022/src/day_8/: grid.rs  mod.rs
aoc2022/src/day_9/: mod.rs  parse.rs
aoc2023/: Cargo.toml
aoc2023/day_14/: Cargo.toml
aoc2023/day_14/src/: lib.rs
aoc2023/glue/src/: lib.rs
aoc2023/rest/: Cargo.toml
aoc2023/rest/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  lib.rs
aoc2023/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs  main.rs
aoc2024/: Cargo.toml  bacon.toml  rustc-ice-2024-12-01T16_02_58-16292.txt
aoc2024/day1/: Cargo.toml  p1.md  p2.md
aoc2024/day1/src/: common.rs  p1.rs  p2.rs  parse.rs
aoc2024/day10/: Cargo.toml  p1.md  p2.md
aoc2024/day10/src/: TRAILHEAD_6  common.rs  p1.rs  p2.rs
aoc2024/day11/: Cargo.toml  p1.md  p2.md
aoc2024/day11/src/: common.rs  p1.rs  p2.rs
aoc2024/day12/: Cargo.toml  p1.md
aoc2024/day12/src/: p1.rs  p1_garden.rs  p1_regions.rs  p2.rs
aoc2024/day13/: Cargo.toml  p1.md
aoc2024/day13/src/: p1.rs  p2.rs
aoc2024/day14/: Cargo.toml  p1.md
aoc2024/day14/src/: p1.rs  p2.rs
aoc2024/day15/: Cargo.toml  p1.md
aoc2024/day15/src/: p1.rs  p2.rs
aoc2024/day17/: Cargo.toml  p1.md
aoc2024/day17/src/: p1.rs  p2.rs
aoc2024/day18/: Cargo.toml  p1.md  p2.md
aoc2024/day18/src/: common.rs  p1.rs  p2.rs
aoc2024/day19/: Cargo.toml  p1.md  p2.md
aoc2024/day19/src/: common.rs  p1.rs  p2.rs
aoc2024/day2/: Cargo.toml  p1.md
aoc2024/day2/src/: common.rs  p1.md  p1.rs  p2.md  p2.rs
aoc2024/day21/: Cargo.toml  p1.md
aoc2024/day21/src/: EXAMPLE_SHORTEST  p1.rs  p2.rs
aoc2024/day24/: Cargo.toml  p1.md  p2.md
aoc2024/day24/src/: common.rs  p1.rs  p2.rs
aoc2024/day25/: Cargo.toml  p1.md
aoc2024/day25/src/: p1.rs  p2.rs
aoc2024/day3/: Cargo.toml  p1.md  p2.md
aoc2024/day3/src/: common.rs  p1.md  p1.rs  p2.rs
aoc2024/day4/: Cargo.toml  p1.md  p2.md
aoc2024/day4/src/: p1.rs  p2.rs
aoc2024/day5/: Cargo.toml  p1.md  p2.md
aoc2024/day5/src/: p1.rs  p2.rs
aoc2024/day6/: Cargo.toml  p1.md  p2.md
aoc2024/day6/src/: EXAMPLE_2  EXAMPLE_3  EXAMPLE_4  EXAMPLE_5  p1.rs  p2.rs
aoc2024/day7/: Cargo.toml  p1.md  p2.md
aoc2024/day7/src/: p1.rs  p2.rs  parse.rs
aoc2024/day8/: Cargo.toml  p1.md  p2.md
aoc2024/day8/src/: BASIC_P1_ANTINODES  INTERMEDIATE_P1_ANTINODES_1  INTERMEDIATE_P1_ANTINODES_2  common.rs  p1.rs  p2.rs
aoc2024/day9/: Cargo.toml  p1.md  p2.md
aoc2024/day9/src/: BASIC_COMPACTING  EXAMPLE_COMPACTING  EXAMPLE_COMPACTING_P2  common.rs  p1.rs  p2.rs
aoc2024/day_template/src/: p1.rs  p2.rs
aoc2024/util/: Cargo.toml
aoc2024/util/src/: lib.rs
