[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
lazy_static = "1.4.0"
nom = "7.1.1"
itertools = "0.10.5"
camino = "1.1.4"

[dev-dependencies]
test-case = "3.0.0"
