[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
itertools = "0.12"
seq-macro = "0.3"
thiserror = "1.0"
regex = "1.10"
strum = { version = "0.25", features = ["derive", "strum_macros"] }