[workspace]
members = [
    "util",
    "day1",
    "day2",
    "day3"
]
default-members = ["util"]

[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[lib]
path = "util"

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
util = { path = "util" }
itertools = "0.13.0"
winnow = "0.6.20"