[workspace]
members = [
    "util",
    "day1", "day2", "day3", "day4", "day5",
    "day6", "day7", "day8", "day9", "day10",
    "day11", "day12", "day13", "day14", "day15",
    "day17", "day18", "day19",
    "day21", "day24", "day25"]
default-members = ["util"]

[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[lib]
path = "util"

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
util = { path = "util" }
itertools = "0.13.0"
winnow = "0.6.20"
anyhow = "1.0.94"
colored = "2.1.0"