[package]
name = "day_14"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glue = { workspace = true }
itertools = { workspace = true }
#seq-macro = { workspace = true }
#thiserror = { workspace = true }
anyhow = { workspace = true }
#nom = { workspace = true }
#regex = { workspace = true }
#strum = { workspace = true }
#syn = { workspace = true }